fix авторизации и z-index

--- a/src/app/components/pop-up-entry/pop-up-entry.component.css
+++ b/src/app/components/pop-up-entry/pop-up-entry.component.css
@@ -86,7 +86,7 @@
 
 @media (max-width: 987px) {
     .popup-login-link {
-        width: 90%;
+        width: 100%;
     }
 }
 
